# selfconnect-alt

./: CLAUDE.md  bench_compare.py  bench_results.csv  debug_conpty.py  pyproject.toml  real_integration_test.py  runbook_writer.py  sc_mesh_demo.py  self_connect.py  stress_capture.py  stress_inject_claude.py  stress_ipc.py  stress_uitree.py  stress_wmchar.py
.github/workflows/: ci.yml
claudego/: scanner.py
claudego/static/: index.html
runbooks/: README.md  capture_chrome_window.md  cross_machine_mesh.md  deep-win32-optimization-selfconnect-alt-build-and-test-process.md  enter_claude_tui.md  fix_antigravity_gemini.md  inject_webview2_chat.md  peer_approval_check.md  sc-ai-to-ai-mesh-demo.md  sc-alt-benchmark.md  sc-alt-unit-test-suite.md  sc-alt-win32-integration-test.md  spawn-and-operate-local-agentpy-mesh-agent-agent-b.md  spawn_claude_terminal.md  submit-pending-input-in-claude-code-tui-via-wm-char-0x0d.md
skills/selfconnect-inter-terminal/: skill.md
tests/: test_cache_request.py  test_claudego_scanner.py  test_conpty.py  test_console_io.py  test_new_features.py
