[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfconnect-alt"
version = "0.10.0-alt"
description = "OS-native Win32 bridge for AI agent orchestration — PostMessage, PrintWindow, UIA, cross-machine mesh, Telegram approvals, ClaudeGo dashboard."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "automation", "windows", "desktop", "win32", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Desktop Environment",
]
dependencies = [
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
uia = [
    "pywinauto>=0.6.8",
]
telegram = [
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
]
ocr = [
    "pytesseract>=0.3.10",
]
claudego = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pywinauto>=0.6.8",
]
alt = [
    "dxcam>=0.0.5",
    "comtypes>=1.4.0",
]
full = [
    "pywinauto>=0.6.8",
    "comtypes>=1.4.0",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "dxcam>=0.0.5",
]

[project.urls]
Homepage = "https://github.com/rblake2320/selfconnect"
Repository = "https://github.com/rblake2320/selfconnect"

[tool.hatch.build.targets.wheel]
include = ["self_connect.py", "claudego/**"]

[tool.pytest.ini_options]
testpaths = ["tests", "test_self_connect.py"]
